<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.cmarshall.justjava.MainActivity"
    tools:showIn="@layout/activity_main">

    <EditText
        android:id="@+id/name_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_field"
        android:inputType="textCapWords"
        />

    <CheckBox
        android:id="@+id/whipped_check_box_view"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/whipped_check_box_view"/>
    <CheckBox
        android:id="@+id/chocolate_check_box_view"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/chocolate_check_box_view"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/quantity_text_view"
        android:textAllCaps="true"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/darker_gray"
            android:onClick="decrement"
            android:text="-"
            android:textSize="20sp"

            />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="0"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@android:color/darker_gray"
            android:onClick="increment"
            android:text="+"
            android:textSize="20sp"

            />
    </LinearLayout>

    <Button
        android:id="@+id/order_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/darker_gray"
        android:onClick="submitOrder"
        android:padding="6dp"
        android:text="@string/order_summary"
        android:textSize="20sp"

        />

</LinearLayout>
